kubernetes/novi-sad/deployment-worker.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: worker-app
spec: 
  replicas: 1
  selector:
    matchLabels: 
      run: worker-app
  template:
    metadata:
      labels:
        run: worker-app
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: worker-postgres
              mountPath: /var/lib/postgres/data
        - name: backend
          image: wombat19/cc-project-worker:latest
          ports:
            - containerPort: 8080  # Adjust the port as needed
      volumes:
        - name: worker-postgres
          persistentVolumeClaim:
            claimName: worker-postgres-pvc
