kubernetes/novi-sad/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-app
  labels:
    run: worker-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http 
  selector:
    run: worker-app
