kubernetes/novi-sad/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worker-app 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: worker-app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: worker-app
            port:
              number: 80
